--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,8 +27,8 @@ jobs:
     - id: auth
       uses: google-github-actions/auth@v2.0.0  
       with:
-        workload_identity_provider: 'projects/657207815175/locations/global/workloadIdentityPools/github-demo-pool/providers/github'
-        service_account: 'github-wif@tt-dev-001.iam.gserviceaccount.com'
+        workload_identity_provider: 'projects/175415323680/locations/global/workloadIdentityPools/github-identity-pool/providers/github-provider'
+        service_account: 'github-identity-federation-sa@properties-app-418208.iam.gserviceaccount.com'
 
 
           
