--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,18 +24,18 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # - id: auth
-    #   uses: google-github-actions/auth@v2.0.0  
-    #   with:
-    #     workload_identity_provider: 'projects/175415323680/locations/global/workloadIdentityPools/github-identity-pool/providers/github-provider'
-    #     service_account: 'github-identity-federation-sa@properties-app-418208.iam.gserviceaccount.com'
-
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
+    - id: auth
+      uses: google-github-actions/auth@v2.0.0  
       with:
-        #workload_identity_provider: '${{ env.WORKLOAD_IDENTITY_PROVIDER }}'
         workload_identity_provider: 'projects/175415323680/locations/global/workloadIdentityPools/github-identity-pool/providers/github-provider'
+        service_account: 'github-identity-federation-sa@properties-app-418208.iam.gserviceaccount.com'
+
+    # - id: 'auth'
+    #   name: 'Authenticate to Google Cloud'
+    #   uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
+    #   with:
+    #     #workload_identity_provider: '${{ env.WORKLOAD_IDENTITY_PROVIDER }}'
+    #     workload_identity_provider: 'projects/175415323680/locations/global/workloadIdentityPools/github-identity-pool/providers/github-provider'
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
