--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,11 +39,11 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+
     # Run the bash script to check GKE cluster status
     - name: Check if GKE Cluster Exists
       run: |
-        chmod +x scripts/check-gke-cluster.sh
-        ./scripts/check-gke-cluster.sh
+        chmod +x .github/workflows/scripts/check-gke-cluster.sh
 
     - name: Terraform Init
       run: terraform init
