Adding gcloud install before using gloud commands in script

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,6 +40,14 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
 
+      # Install Google Cloud SDK
+    - name: Install Google Cloud SDK
+      run: |
+        echo "Installing Google Cloud SDK..."
+        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] http://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg
+        sudo apt-get update && sudo apt-get install -y google-cloud-sdk
+
     # Run the bash script to check GKE cluster status
     - name: Check if GKE Cluster Exists
       run: |
