--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,23 +44,11 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-
-    - name: Terraform Init
-      run: terraform init
-
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan -input=false
-
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
-
-
+    
     # Generates a destruction plan for Terraform
-    # - name: Terraform Plan Destroy
-    #   run: terraform plan -destroy -input=false
+    - name: Terraform Plan Destroy
+      run: terraform plan -destroy -input=false
 
-    # - name: Terraform Destroy
-    #   run: terraform destroy -auto-approve -input=false
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve -input=false
       
