--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,6 +44,9 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+   
+    - name: Terraform Init
+      run: terraform init
     
     # Generates a destruction plan for Terraform
     - name: Terraform Plan Destroy
