Create GKE cluster

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,7 +46,9 @@ jobs:
         if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
           WORKSPACE_NAME="main"
         else
-          WORKSPACE_NAME="${{ github.ref_name }}"
+          # Replace slashes with dashes for workspace name
+          WWORKSPACE_NAME="${{ github.ref }}"; 
+          WORKSPACE_NAME=${WORKSPACE_NAME//\//-}
         fi
         
         # Create the workspace if it doesn't exist and select it
