--- a/.github/workflows/Deploy to GKE.yml
+++ b/.github/workflows/Deploy to GKE.yml
@@ -7,7 +7,7 @@ on:
       - 'deploy/**'
 
 jobs:
-  update-manifest:
+  checkout-manifests:
     runs-on: ubuntu-latest
     steps:
       # Steps to update your manifest files (if any)
@@ -15,9 +15,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Step 2: Get the list of changed files
+      - name: Get changed files
+      run: |
+        git fetch --depth=2
+        git diff --name-only HEAD^ HEAD > changed_files.txt
+        cat changed_files.txt
+        echo "CHANGED_FILES=$(cat changed_files.txt | tr '\n' ' ')" >> $GITHUB_ENV  # Export changed files to environment variable
+  
   deploy:
     runs-on: ubuntu-latest
-    needs: update-manifest  # Ensure this job runs after the update-manifest job
+    needs: checkout-manifests  # Ensure this job runs after the checkout-manifests
     permissions:
       contents: read
       id-token: write  # Make sure this is present
@@ -38,10 +46,15 @@ jobs:
           location: us-central1  # Adjust your cluster zone
           project_id: properties-app-418208
 
+      # Step 4: Deploy to GKE only for changed files
       - name: Deploy to GKE
         run: |
-          kubectl apply -f deploy/kalyanam-deployment.yaml  # Adjust the path as needed
-          kubectl apply -f deploy/rsvpbackend-deployment.yaml  # Adjust the path as needed
+          for file in $CHANGED_FILES; do
+            echo "Deploying $file"
+            kubectl apply -f $file
+          done
+        env:
+          CHANGED_FILES: ${{ env.CHANGED_FILES }}
 
       # - name: Get list of changed files
       #   id: changed_files
