--- a/.github/workflows/Deploy to GKE.yml
+++ b/.github/workflows/Deploy to GKE.yml
@@ -5,34 +5,8 @@ on:
       - 'deploy/**'
 
 jobs:
-  checkout-manifests:
-    runs-on: ubuntu-latest
-    steps:
-      # Step 1: Checkout repository (with full history for diff to work)
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2  # Fetch at least two commits to compare
-
-      # Step 2: Get the list of changed files
-      - name: Get changed files
-        run: |
-          echo "Checking for changed files..."
-          if git rev-parse --verify HEAD^ >/dev/null 2>&1; then
-            echo "Detected previous commit, running git diff HEAD^"
-            git diff --name-only HEAD^ HEAD > changed_files.txt
-          else
-            echo "No previous commit, running git diff HEAD"
-            git diff --name-only HEAD > changed_files.txt
-          fi
-          echo "Changed files:"
-          cat changed_files.txt  # Show the contents of the changed_files.txt for debugging
-          echo "CHANGED_FILES=$(cat changed_files.txt | tr '\n' ' ')" >> $GITHUB_ENV  # Export changed files to environment variable
-          echo "CHANGED_FILES set as: $CHANGED_FILES"  # Print the variable to debug
-
   deploy:
     runs-on: ubuntu-latest
-    needs: checkout-manifests  # Ensure this job runs after the checkout-manifests
     permissions:
       contents: read
       id-token: write  # Make sure this is present
@@ -56,14 +30,9 @@ jobs:
           location: us-central1  # Adjust your cluster zone
           project_id: properties-app-418208
 
-      # Step 4: Deploy to GKE only for changed files
+      # Step 4: Deploy to GKE
       - name: Deploy to GKE
         run: |
-          echo "Deploying changed files..."
-          echo "CHANGED_FILES: $CHANGED_FILES"  # Print the CHANGED_FILES variable to debug
-          for file in $CHANGED_FILES; do
-            echo "Deploying $file"
-            kubectl apply -f $file
-          done
-        env:
-          CHANGED_FILES: ${{ env.CHANGED_FILES }}
+          echo "Deploying to GKE..."
+          kubectl apply -f deploy/kalyanam-deployment.yaml  # Adjust the path as needed
+          kubectl apply -f deploy/rsvpbackend-deployment.yaml  # Adjust the path as needed
